--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "chart.js": "^2.7.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
