--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^3.6.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "chart.js": "^2.7.1",
